fix(dialog): Fix layout shift because of bootstrap / scrollbar

--- a/frappe/public/scss/common/modal.scss
+++ b/frappe/public/scss/common/modal.scss
@@ -3,14 +3,14 @@ h5.modal-title {
 }
 
 // Hack to fix incorrect padding applied by Bootstrap
-body.modal-open[style^="padding-right"] {
-	padding-right: 12px !important;
-
-	header.navbar {
-		padding-right: 12px !important;
-		margin-right: -12px !important;
-	}
-}
+// body.modal-open[style^="padding-right"] {
+// 	@dokos
+// 	padding-right: 12px !important;
+// 	header.navbar {
+// 		padding-right: 12px !important;
+// 		margin-right: -12px !important;
+// 	}
+// }
 
 .modal {
 	// Same scrollbar as body
